@@ -34,9 +34,8 @@ import unittest
 
 class TestCase(unittest.TestCase):
     def setUp(self):
-        # For versions of Python before 2.7.
-        if not 'assertRaisesRegexp' in dir(self):
-            self.assertRaisesRegexp = self._assertRaisesRegexp
+        # FIXME: Only do this for versions of Python before 2.7.
+        self.assertRaisesRegexp = self._assertRaisesRegexp
 
     def _assertRaisesRegexp(self, regex_message, callable, *args):
         try:
